--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -20,7 +20,7 @@
     <h1>Primeira aula de Java Script</h1>
     <h2>Olá Mundo!</h2>
     <script>
-        window.alert('Esta é uma página de alerta')
+        //window.alert('Esta é uma página de alerta')
         window.confirm('Está gostano de JavaScript ?')
         window.prompt('Qual é o Seu Nome?');
 
