--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -12,11 +12,10 @@
 </head>
 <body>
     <script>
-        /*        nome = window.prompt('Qual é o seu nome ? ')
+        nome = window.prompt('Qual é o seu nome ? ')
         document.write(`Seu nome tem <strong> ${nome.length} </strong>letras.<br>`)
         document.write(`Seu nome em maiusculas <strong> ${nome.toUpperCase()}</strong><br>`)
-        document.write(`Seu nome em letras minúsculas é: <strong> ${nome.toLowerCase()}</stromg><br>`)*/
-            var n1 = 1543.5
+        document.write(`Seu nome em letras minúsculas é: <strong> ${nome.toLowerCase()}</stromg><br>`)
             
     </script>
 </body>
