--- a/aula06/ex005.html
+++ b/aula06/ex005.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Primeiros Passos com DOM</title>
 </head>
 <body>
-    
+    <h1>Iniciando estudos com D.O.M</h1>
 </body>
 </html>
