--- a/aula06/ex005.html
+++ b/aula06/ex005.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeiros Passos com DOM</title>
+    <style>
+        body{
+            background-color: rgb(68, 125, 199);
+            color: white;
+            font: normal  18pt arial;
+
+        }
+    </style>
 </head>
 <body>
-    <h1>Iniciando estudos com D.O.M</h1>
+    <h1>Iniciando estudos com DOM</h1>
+    <p>aqui vai o resultado</p>
+    <p>aprndendo a usar o <strong>DOM </strong>em javascript</p>
+    <div>clique em mim</div>
+    <script>
+        
+    </script>
 </body>
 </html>
