--- a/aula06/ex005.html
+++ b/aula06/ex005.html
@@ -16,10 +16,10 @@
 <body>
     <h1>Iniciando estudos com DOM</h1>
     <p>aqui vai o resultado</p>
-    <p>aprndendo a usar o <strong>DOM </strong>em javascript</p>
+    <p>aprndendo a usar o <strong>DOM </strong>em javascrip</p>
     <div>clique em mim</div>
     <script>
-        
+       window.document.write(window.document.URL) 
     </script>
 </body>
 </html>
