--- a/aula06/ex005.html
+++ b/aula06/ex005.html
@@ -17,7 +17,7 @@
     <h1>Iniciando estudos com DOM</h1>
     <p>aqui vai o resultado</p>
     <p>aprndendo a usar o <strong>DOM </strong>em javascrip</p>
-    <div>clique em mim</div>
+    <div>clique em mim.</div>
     <script>
        window.document.write(window.document.URL) 
     </script>
