--- a/aula10/ex006.html
+++ b/aula10/ex006.html
@@ -7,7 +7,7 @@
     <style>
         div#area{
             font: normal 20pt arial;
-            background-color: rgb(62, 242, 62);
+            background-color: #3ef23e;
             color: white;
             width: 200px;
             height: 200px;
@@ -19,8 +19,26 @@
     </style>
 </head>
 <body>
-    <div id="area">
+    <div id="area" >
         interaja...
     </div>
+    <script>
+        var a = window.document.getElementById('area')
+        a.addEventListener('click',clicar)
+        a.addEventListener('mouseenter', entrar)
+        a.addEventListener('mouseout', sair)
+        function clicar(){
+            a.innerText = 'Clicou !' 
+            a.style.backgroundColor = 'red'
+               }
+        function entrar(){
+            a.innerText = 'entrou !'
+        }
+        function sair(){
+            a.innerText = 'Saiu !'
+            a.style.backgroundColor = '#3ef23e'
+        }       
+
+    </script>
 </body>
 </html>
