--- a/aula11/ex010.html
+++ b/aula11/ex010.html
@@ -16,7 +16,11 @@
             var txtv =window.document.getElementById('txtvel') 
             var res = window.document.querySelector('div#res')
             var vel = Number(txtv.value)  
-            res.innerHTML = `Sua cidade atual é <strong>${vel}</strong>` 
+            res.innerHTML = `<p>Sua velocidade atual é <strong>${vel}</strong></p>`
+            if(vel >60){
+                res.innerHTML += '<p> Você foi <strong>multado!</strong></p>'
+            } 
+            res.innerHTML += `<p>Dirija sempre com o cinto de segurança</p>`
         }
 
     </script>
