--- a/aula14/modelo.html
+++ b/aula14/modelo.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>exercicio da aula 12</title>
+    <title>Hora do dia</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>Título</h1>
+        <h1>Hora do dia</h1>
     </header>
     <section>
-        <div>
-            testa,do
+        <div id="msg">
+            aqui vai aparecer a mensagem
         </div>
-            Olá !
-        <div>
-
+            
+        <div id="foto">
+            <img id="imagem" src="imagens/manha1.png" alt="foto do dia">
         </div>
     </section>
     <footer>
