--- a/ex016/modelo.html
+++ b/ex016/modelo.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>exercicio da aula 12</title>
+    <title>Super Contador</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Vamos Contar</h1>
     </header>
     <section>
-        <div>
-            testa,do
+        <div id="dados">
+            <p>Inicio: <input type="number" name="inicio" id="txti"></p>
+            <p>Fim: <input type="number" name="Fim" id="txtf"> </p>
+            <p>Passo: <input type="number" name="Passo" id="txtp"></p>
+            <p><input type="button" value="Contar" onclick="contar()"></p>
         </div>
-            Olá !
-        <div>
-
+            
+        <div id="res">
+            preparando a contagem...
         </div>
     </section>
     <footer>
