--- a/ex017/modelo.html
+++ b/ex017/modelo.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>exercicio da aula 12</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div>
-            testa,do
+            <p>Número: <input type="number" name="num" id="txtn"><input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
         </div>
-            Olá !
+            <select name="Tabuada" id="seltab" size="10"><option>Digite um número acima</option></select>
         <div>
 
         </div>
